--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ h1 {
 .social-links a { display: inline-block; width: 24px; height: 24px; margin: 3px 0 0 8px; vertical-align: middle; }
 
 .social-links a.twitter { background: url(../img/social-icons/twitter.png) left top no-repeat; }
+.social-links a.soundcloud { background: url(../img/social-icons/soundcloud.png) left top no-repeat; }
 .social-links a.dribbble { background: url(../img/social-icons/dribbble.png) left top no-repeat; }
 .social-links a.rss { background: url(../img/social-icons/rss.png) left top no-repeat; }
 .social-links a.pinterest { background: url(../img/social-icons/pinterest.png) left top no-repeat; }
