--- a/components/fontello/css/fontello.css
+++ b/components/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?49326847');
-  src: url('../font/fontello.eot?49326847#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?49326847') format('woff'),
-       url('../font/fontello.ttf?49326847') format('truetype'),
-       url('../font/fontello.svg?49326847#fontello') format('svg');
+  src: url('../font/fontello.eot?61642268');
+  src: url('../font/fontello.eot?61642268#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?61642268') format('woff'),
+       url('../font/fontello.ttf?61642268') format('truetype'),
+       url('../font/fontello.svg?61642268#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?49326847#fontello') format('svg');
+    src: url('../font/fontello.svg?61642268#fontello') format('svg');
   }
 }
 */
@@ -50,8 +50,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.social-duckduckgo:before { content: '\e800'; } /* '' */
+.social-music:before { content: '\e868'; } /* '' */
 .social-lkdto:before { content: '\e866'; } /* '' */
+.social-duckduckgo:before { content: '\e800'; } /* '' */
+.social-aim:before { content: '\e801'; } /* '' */
 .social-delicious:before { content: '\e802'; } /* '' */
 .social-paypal:before { content: '\e803'; } /* '' */
 .social-flattr:before { content: '\e804'; } /* '' */
@@ -100,8 +102,8 @@
 .social-twitter:before { content: '\e82f'; } /* '' */
 .social-youtube:before { content: '\e830'; } /* '' */
 .social-vimeo:before { content: '\e831'; } /* '' */
-.social-windows:before { content: '\e832'; } /* '' */
-.social-aim:before { content: '\e801'; } /* '' */
+.social-headphones:before { content: '\e867'; } /* '' */
+.social-xing:before { content: '\e833'; } /* '' */
 .social-yahoo:before { content: '\e834'; } /* '' */
 .social-chrome:before { content: '\e835'; } /* '' */
 .social-email:before { content: '\e836'; } /* '' */
@@ -152,4 +154,4 @@
 .social-login:before { content: '\e863'; } /* '' */
 .social-stackoverflow:before { content: '\e864'; } /* '' */
 .social-hackernews:before { content: '\e865'; } /* '' */
-.social-xing:before { content: '\e833'; } /* '' */
+.social-windows:before { content: '\e832'; } /* '' */
