Fixing up banner, adding Google Font

--- a/css/style.less
+++ b/css/style.less
@@ -53,7 +53,8 @@ body {
   .group-left {
     position: relative;
     .group-inner {
-      bottom: 0;
+      font-family: 'Days One', sans-serif;
+      top: 25%;
       position: absolute;
       text-align: center;
       width: 100%;
@@ -65,10 +66,10 @@ body {
         width: 100%;
       }
       .top-line {
-        .font-size(4.8);
+        .font-size(7);
       }
       .bottom-line {
-        .font-size(2);
+        .font-size(2.6);
       }
     }
   }
